# rust-sdk

./: .gitignore  Cargo.toml  README.md
.github/scripts/: codegen-check.sh
.github/workflows/: ci.yml  e2e_tests.yml  integration_tests.yml  release.yml
.trix/client-lib/: Cargo.toml.hbs  README.md.hbs  lib.rs.hbs
bindgen/: Cargo.toml.hbs  cargo.toml.hbs  lib.rs.hbs
examples/: buidlerfest2026.tii  transfer.env  transfer.tii  transfer.tii.json  transfer.tx3
sdk/: Cargo.toml
sdk/src/: codegen.rs  core.rs  facade.rs  lib.rs
sdk/src/tii/: mod.rs  schema.rs  spec.rs
sdk/src/trp/: args.rs  mod.rs  spec.rs
sdk/src/trp/error/: pretty.rs
sdk/tests/: codegen.rs  error_cases.rs  happy_path.rs  smoke.rs
