[package]
name = "tx3-sdk"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tx3-lang = "0.7.2"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
hex = "0.4.3"
base64 = "0.22.1"
bech32 = "0.11.0"

[lib]
path = "src/lib.rs"
