[package]
name = "tx3-sdk"
description = "Tx3 Rust SDK"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tx3-tir = { workspace = true }

reqwest = { version = "0.12.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
hex = "0.4.3"
base64 = "0.22.1"
bech32 = "0.11.0"
